[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Enemy/LaserE.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemy/laserRed04.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enemy/laserRed09.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.00279
height = 24.0124

[node name="LaserE" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Shoot"

[node name="notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.374722, 0 )
scale = Vector2( 0.647758, 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.387428, 0.387424 )
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_LaserE_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_LaserE_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
